--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
+    "ejs-lint": "^1.0.1",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
-    "mongodb": "^3.5.4"
+    "mongodb": "^3.5.4",
+    "mongoose": "^5.9.6",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
