--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "ejs-lint": "^1.0.1",
