--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "ejs": "^3.0.1",
     "ejs-lint": "^1.0.1",
     "express": "~4.16.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.6",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
